changed some spelling issues and alignments issues in summery and experiences

--- a/src/App.css
+++ b/src/App.css
@@ -394,13 +394,15 @@ a {
   background-position: center;
   background-repeat: no-repeat;
 }
-#\39 > .cards-skill-body {
+#\31 0> .cards-skill-body {
   margin-top: -5px;
   background-image: url("./images/logos/mongodb-logo.svg");
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
+#\31 1{}
+#\31 2{}
 
 .cards-experience {
   background-color: rgba(204, 204, 204, 0.8);
@@ -531,6 +533,7 @@ a {
 }
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 1px rgba(0, 0, 0, 1);
+  box-shadow: inset 0 0 1px rgba(0, 0, 0, 1);
   border-radius: 100vw;
 }
 ::-webkit-scrollbar-thumb {
@@ -542,7 +545,7 @@ a {
 .summery {
   border-radius: 10px;
   max-width: 90vw;
-  margin: 0px 1vw;
+  margin: 0px 1vw 0vh 2vw;
   padding: 3px;
 }
 .summery-text > h3 {
